--- a/appointments/package.json
+++ b/appointments/package.json
@@ -12,7 +12,18 @@
     "@babel/preset-env": "7.18.2",
     "@babel/preset-react": "7.17.12",
     "@babel/preset-typescript": "7.17.12",
+    "@types/jest": "28.1.1",
+    "@types/react": "18.0.12",
+    "@types/react-dom": "18.0.5",
+    "@typescript-eslint/eslint-plugin": "5.27.1",
+    "@typescript-eslint/parser": "5.27.1",
+    "eslint": "8.17.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "7.30.0",
     "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
+    "prettier": "2.6.2",
     "ts-node": "10.8.1",
     "typescript": "4.7.3"
   },
