--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
     "@types/cookie": "0.5.1",
     "@types/jest": "28.1.1",
+    "@types/node": "17.0.42",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "5.27.1",
