--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,9 +31,9 @@
     "strictNullChecks": true,
     "suppressExcessPropertyErrors": false,
     "target": "es6",
-    "types": ["jest"]
+    "types": ["jest", "node"]
   },
-  "exclude": [".vscode", "dist", "node_modules" ],
+  "exclude": [".vscode", "dist", "node_modules"],
   "files": ["declarations.d.ts"],
   "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
