--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "scripts": {
     "build": "rm -rf dist && MODE=production webpack",
     "check-types": "tsc --noEmit",
+    "check-types:watch": "tsc --noEmit --watch",
     "dev": "MODE=development npx webpack serve",
     "lint": "eslint src",
     "prepare": "husky install",
