--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": false,
     "paths": {
+      "#sampleData/*": ["src/sampleData/*"],
       "#types/*": ["src/types/*"],
       "#utils/*": ["src/utils/*"]
     },
