--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "author": "",
   "dependencies": {
+    "lodash": "4.17.21",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-router-dom": "6.3.0"
@@ -18,6 +19,7 @@
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
     "@types/cookie": "0.5.1",
     "@types/jest": "28.1.1",
+    "@types/lodash": "4.14.182",
     "@types/node": "17.0.42",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
