--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "5.27.1",
     "@typescript-eslint/parser": "5.27.1",
+    "autoprefixer": "10.4.7",
     "babel-loader": "8.2.5",
     "css-loader": "6.7.1",
     "eslint": "8.17.0",
@@ -35,8 +36,11 @@
     "husky": "8.0.1",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
+    "postcss": "8.4.14",
+    "postcss-loader": "7.0.0",
     "prettier": "2.6.2",
     "style-loader": "3.3.1",
+    "tailwindcss": "3.1.3",
     "ts-node": "10.8.1",
     "typescript": "4.7.3",
     "webpack": "5.73.0",
@@ -64,7 +68,8 @@
     "prepare": "husky install",
     "prettier": "prettier --write 'src/**/*.{css,ts,tsx}'",
     "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll",
+    "postcss:watch": "postcss ./src/index.css --dir dist --watch"
   },
   "version": "1.0.0"
 }
