--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "typescript": "4.7.3",
     "webpack": "5.73.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.9.2"
+    "webpack-dev-server": "4.9.2",
+    "whatwg-fetch": "3.6.2"
   },
   "files": [
     "dist"
