--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "author": "",
   "dependencies": {
     "lodash": "4.17.21",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-router-dom": "6.3.0"
   },
   "description": "",
@@ -15,20 +15,21 @@
     "@faker-js/faker": "7.2.0",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.3.0",
-    "@testing-library/user-event": "14.2.0",
+    "@testing-library/user-event": "14.2.1",
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
     "@types/cookie": "0.5.1",
-    "@types/jest": "28.1.1",
+    "@types/jest": "28.1.2",
     "@types/lodash": "4.14.182",
-    "@types/node": "17.0.42",
-    "@types/react": "18.0.12",
+    "@types/node": "18.0.0",
+    "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
-    "@typescript-eslint/eslint-plugin": "5.27.1",
-    "@typescript-eslint/parser": "5.27.1",
+    "@types/react-test-renderer": "18.0.0",
+    "@typescript-eslint/eslint-plugin": "5.28.0",
+    "@typescript-eslint/parser": "5.28.0",
     "autoprefixer": "10.4.7",
     "babel-loader": "8.2.5",
     "css-loader": "6.7.1",
-    "eslint": "8.17.0",
+    "eslint": "8.18.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.30.0",
@@ -38,11 +39,12 @@
     "jest-environment-jsdom": "28.1.1",
     "postcss": "8.4.14",
     "postcss-loader": "7.0.0",
-    "prettier": "2.6.2",
+    "prettier": "2.7.1",
+    "react-test-renderer": "18.2.0",
     "style-loader": "3.3.1",
     "tailwindcss": "3.1.3",
     "ts-node": "10.8.1",
-    "typescript": "4.7.3",
+    "typescript": "4.7.4",
     "webpack": "5.73.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.9.2",
