--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "author": "",
   "dependencies": {
+    "express": "4.18.1",
     "lodash": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -37,6 +38,7 @@
     "husky": "8.0.1",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
+    "nodemon": "2.0.16",
     "postcss": "8.4.14",
     "postcss-loader": "7.0.0",
     "prettier": "2.7.1",
@@ -67,6 +69,7 @@
     "check-types": "tsc --noEmit",
     "check-types:watch": "tsc --noEmit --watch",
     "dev": "MODE=development npx webpack serve",
+    "dev:server": "nodemon ./server/index.js",
     "lint": "eslint src",
     "prepare": "husky install",
     "prettier": "prettier --write 'src/**/*.{css,ts,tsx}'",
