--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@testing-library/user-event": "14.2.1",
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
     "@types/cookie": "0.5.1",
-    "@types/jest": "28.1.2",
+    "@types/jest": "28.1.3",
     "@types/lodash": "4.14.182",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
@@ -33,12 +33,12 @@
     "eslint": "8.18.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.30.0",
+    "eslint-plugin-react": "7.30.1",
     "html-webpack-plugin": "5.5.0",
     "husky": "8.0.1",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
-    "nodemon": "2.0.16",
+    "nodemon": "2.0.18",
     "postcss": "8.4.14",
     "postcss-loader": "7.0.0",
     "prettier": "2.7.1",
@@ -74,7 +74,7 @@
     "prepare": "husky install",
     "prettier": "prettier --write 'src/**/*.{css,ts,tsx}'",
     "test": "jest",
-    "test:watch": "jest --watchAll",
+    "test:watch": "jest --watch",
     "postcss:watch": "postcss ./src/index.css --dir dist --watch"
   },
   "version": "1.0.0"
