--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "14.2.1",
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
     "@types/cookie": "0.5.1",
+    "@types/history": "5.0.0",
     "@types/jest": "28.1.3",
     "@types/lodash": "4.14.182",
     "@types/node": "18.0.0",
@@ -34,6 +35,7 @@
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.30.1",
+    "history": "5.3.0",
     "html-webpack-plugin": "5.5.0",
     "husky": "8.0.1",
     "jest": "28.1.1",
