--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "lodash": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.3.0"
+    "react-redux": "8.0.2",
+    "react-router-dom": "6.3.0",
+    "redux": "4.2.0",
+    "redux-thunk": "2.4.1"
   },
   "description": "",
   "devDependencies": {
