--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "author": "",
   "dependencies": {
+    "@reduxjs/toolkit": "1.8.2",
     "express": "4.18.1",
     "lodash": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "8.0.2",
-    "react-router-dom": "6.3.0",
-    "redux": "4.2.0",
-    "redux-thunk": "2.4.1"
+    "react-router-dom": "6.3.0"
   },
   "description": "",
   "devDependencies": {
