--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@reduxjs/toolkit": "1.8.2",
     "express": "4.18.1",
     "lodash": "4.17.21",
+    "luxon": "2.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "8.0.2",
@@ -24,6 +25,7 @@
     "@types/history": "5.0.0",
     "@types/jest": "28.1.3",
     "@types/lodash": "4.14.182",
+    "@types/luxon": "2.3.2",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
