--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "author": "",
   "dependencies": {
-    "@reduxjs/toolkit": "1.8.2",
+    "@reduxjs/toolkit": "1.8.3",
+    "date-fns": "2.28.0",
     "express": "4.18.1",
     "lodash": "4.17.21",
     "react": "18.2.0",
@@ -11,10 +12,10 @@
   },
   "description": "",
   "devDependencies": {
-    "@babel/core": "7.18.5",
-    "@babel/preset-env": "7.18.2",
-    "@babel/preset-react": "7.17.12",
-    "@babel/preset-typescript": "7.17.12",
+    "@babel/core": "7.18.6",
+    "@babel/preset-env": "7.18.6",
+    "@babel/preset-react": "7.18.6",
+    "@babel/preset-typescript": "7.18.6",
     "@faker-js/faker": "7.3.0",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.3.0",
@@ -28,20 +29,20 @@
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/react-test-renderer": "18.0.0",
-    "@typescript-eslint/eslint-plugin": "5.29.0",
-    "@typescript-eslint/parser": "5.29.0",
+    "@typescript-eslint/eslint-plugin": "5.30.0",
+    "@typescript-eslint/parser": "5.30.0",
     "autoprefixer": "10.4.7",
     "babel-loader": "8.2.5",
     "css-loader": "6.7.1",
     "eslint": "8.18.0",
     "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.30.1",
     "history": "5.3.0",
     "html-webpack-plugin": "5.5.0",
     "husky": "8.0.1",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "28.1.1",
+    "jest": "28.1.2",
+    "jest-environment-jsdom": "28.1.2",
     "nodemon": "2.0.18",
     "postcss": "8.4.14",
     "postcss-loader": "7.0.0",
@@ -53,7 +54,7 @@
     "typescript": "4.7.4",
     "webpack": "5.73.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.9.2",
+    "webpack-dev-server": "4.9.3",
     "whatwg-fetch": "3.6.2"
   },
   "files": [
